2005-12-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/domish.py:
	Fixed location of utf-8 encode.

	* src/tlib/oscar.py:
	Check for existance of extended status encoding.

	* src/legacy/icqt.py:
	Added handling of extended status encoding.

2005-12-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Killed %s print.

	* src/main.py:
	Rebinded sys.stdout so that it can handle unicode.

	* src/legacy/icqt.py:
	Switched to encode with utf-16be for unicode support.

	* src/legacy/legacylist.py:
	Added handling of capabilities.

	* src/legacy/icqt.py:
	Fixed handling of unicode check.

2005-12-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Updated announced versions for ICQ5 support.

	* config_example.xml:
	Removed confjid reference since it doesn't appear to work.

	* src/legacy/legacyiq.py:
	* src/legacy/glue.py:
	Added misc iq features.

2005-12-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Fixed encoding issue.

2005-12-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/defaultAvatar.png:
	* src/legacy/defaultJabberAvatar.png:
	Updated to maarten's submitted icon!  Thanks maarten!

	* src/legacy/icqt.py:
	Fixed issue wth retrieving vcard for user who isn't an ICQ user.

2005-12-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Hrm, connectionlost doesn't work well with icq.
	Lots of fixes.

	* src/tlib/oscar.py:
	Actually bother to listen for message ack.

2005-12-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	More attempts to sever connection nicely.

	* src/tlib/oscar.py:
	Increased version we identify ourselves as.

	* src/disco.py:
	Severed long log entry.

2005-11-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/legacylist.py:
	Added handling of ICQ specific thingys, plus nicks.

	* src/legacy/icqt.py:
	Imported PyAIM changes.

	* src/legacy/glue.py:
	Fixed typo.

	* src/config.py:
	Added encoding which I had missed.
